# s3insqlite

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  config.toml  pyproject.toml
src/: main.rs
src/handlers/: bucket.rs  mod.rs  object.rs
src/models/: config.rs  mod.rs  s3.rs  state.rs
src/utils/: bucket.rs  db.rs  logging.rs  mod.rs
tests/: .gitignore  benchmark_throughput_netcdf4.py  config.toml  opendal_functionality_test.rs  opendal_throughput_test.rs  s3_functionality_test.py  s3_throughput_test.py  zarr_functionality_test.py  zarr_manykey_test.py  zarrs_functionality_test.rs  zarrs_throughput_test.rs
tests/common/: mod.rs
