[package]
name = "s3insqlite"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
hyper = { version = "1", features = ["full"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["trace", "limit"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
config = "0.15"
toml = "0.9"
r2d2 = "0.8"
r2d2_sqlite = "0.31"
url = "2"
md5 = "0.8"
hex = "0.4"
num_cpus = "1"
bytes = "1"
http = "1"
http-body = "1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
ndarray = { version = "0.16" }
rand = { version = "0.9" }
opendal = { version = "0.54", features = ["services-s3"] }
zarrs = { version = "0.21", features = ["zstd", "async"] }
zarrs_opendal = { version = "0.8" }
