[project]
name = "s3insqlite"
version = "0.1.0"
description = "Amazon S3 service in/out a SQLite database"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fsspec>=2025",
  "netcdf4>=1",
  "numpy>=2",
  "s3fs>=2025",
  "zarr>=3",
]

[dependency-groups]
dev = ["boto3>=1.37", "ipykernel>=6.29"]

[tool.pyright]
extraPaths = [".venv/lib/python3.13/site-packages"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
